click on banner

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-drag-drop-files": "^2.3.4",
     "react-dropzone": "^12.0.4",
     "react-scripts": "5.0.0",
+    "react-spring": "^9.4.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
